🐛 (fix): Fix text color

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@
 
 @media (prefers-color-scheme: dark) {
 	:root {
-		--foreground-rgb: 255, 255, 255;
+		--foreground: white;
 		--background-hex: #111111;
 	}
 }
